# 86Box-ICH2

./: CMakePresets.json  README.md
src/: CMakeLists.txt  acpi.c  dma.c  intel_ich2_acpi.c  io.c  pic.c  port_6x.c
src/chipset/: CMakeLists.txt  intel_430fx.c  intel_815ep.c  intel_ich2.c  intel_mch.c  intel_piix.c  sarc_2016a.c  sis_471.c  symphony_haydn.c
src/cpu/: 386_common.c  cpu_table.c
src/device/: CMakeLists.txt  hwm_nsc366.c  intel_ich2_acpi.c  intel_ich2_gpio.c  intel_ich2_trap.c  keyboard_at.c  pci_bridge.c  phoenix_486_jumper.c  smbus_piix4.c  tco.c
src/include/86box/: acpi.h  chipset.h  dma.h  flash.h  intel_ac97.h  intel_ich2_gpio.h  intel_ich2_trap.h  keyboard.h  machine.h  nsc366.h  pit.h  port_6x.h  sio.h  smbus.h  snd_ac97.h  spd.h  tco.h
src/include_make/86box/: version.h
src/machine/: CMakeLists.txt  at_base.c  boards_discrete.c  boards_ich2.c  boards_piix.c  boards_sarc_2016a.c  boards_sis_471.c  boards_symphony_haydn.c  m_at.c  m_at_ich2.c  m_at_socket370.c  m_ps2_mca.c  machine.c  machine_table.c
src/mem/: 815ep_spd_hack.c  spd.c  sst_flash.c
src/sio/: CMakeLists.txt  sio_it8702.c  sio_nsc366.c  sio_smc665.c
src/sound/: CMakeLists.txt  intel_ac97.c  intel_ac97_buffer.c
src/win/: Makefile.mingw
